styles/styles.css
@import url("https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:wght@400;600&display=swap");

*,
*::before,
*::after {
  box-sizing: border-box;
}

/* Typography */
html {
  font-size: 62.5%;
  line-height: 1.5;
}

body {
  font-family: "Open Sans", sans-serif;
  font-size: 1.5rem;
}

h1,
h2,
h3 {
  font-family: "Poppins", sans-serif;
  margin-bottom: 1rem;
}

/* collor pallete */

:root {
  --color-primary: hsl(257, 40%, 49%);
  --color-secondary: hsl(300, 69%, 71%);
  --color-white: #eee;
}

/* global section */
.container {
  padding: 0 1rem;
}

/* Grid */
.grid {
  display: grid;
  grid-template-columns: repeat(6, 1fr);
  gap: 5rem;
}

@media screen and (min-width: 768px) {
  .grid {
    grid-template-columns: repeat(12, 1fr);
  }
}

/* button */
.btn {
  width: 20rem;
  padding: 1rem;
  border-radius: 2rem;
  border: 0;
  box-shadow: 0 0 0.5rem var(--color-primary);
  cursor: pointer;
}

.btn--primary {
  color: var(--color-primary);
}

.btn--primary:hover {
  background-color: var(--color-secondary);
  color: var(--color-white);
}

@media screen and (min-width: 768px) {
  .btn {
    width: 15rem;
  }
}

/* block */

.block {
  padding: 5rem 3rem;
}

.block__text {
  opacity: 0.8;
}

/* Hero section */
.block-hero {
  background-color: var(--color-primary);
  background-image: url("../images/bg-mobile.svg");
  background-repeat: no-repeat;
  background-size: contain;
}

.hero__details {
  color: var(--color-white);
  text-align: center;
  grid-area: 2/1/3/7;
}

.hero__btn {
  margin-top: 1rem;
}

.hero__image {
  grid-area: 1/1/1/7;
}

@media screen and (min-width: 768px) {
  .block-hero {
    background-image: url("../images/bg-desktop.svg");
  }

  .hero__details {
    grid-area: 1/8/1/12;
    text-align: start;
  }

  .hero__image {
    grid-area: 1/1/1/8;
    min-width: 300px;
  }
}

/* image */
.img {
  width: 100%;
}

/* Social */
.link {
  text-decoration: none;
}

.social {
  display: flex;
  justify-content: center;
  margin-top: 7rem;
}

@media screen and (min-width: 768px) {
  .social {
    justify-content: flex-end;
    margin-right: 7rem;
  }
}

.social__link {
  font-size: 2rem;
  padding: 0.5rem;
  color: var(--color-white);
  border: 1px solid var(--color-white);
  border-radius: 50%;
  display: inline-flex;
  margin: 1rem;
}

.social__link:hover {
  color: var(--color-secondary);
  border: 1px solid var(--color-secondary);
}

/* navbar */
.nav {
  margin-bottom: 7rem;
}
.nav__brand {
  width: auto;
}

